# libs-team

./: README.md  triagebot.toml
.github/ISSUE_TEMPLATE/: api-change-proposal.md  mcp.md  project-group.md
agenda-generator/: Cargo.toml
agenda-generator/src/: main.rs
data/: README.md
data/2020-12-11-poisoning-survey/: Cargo.toml  README.md  main.rs  poisoning-survey.csv
mcps/: 0000-api-guidelines.md  0006-api-guidelines.md
minutes/: 2020-10-14-meeting.md  2020-11-11-meeting.md  2020-11-18-meeting.md  2020-12-09-meeting.md  2021-01-27-meeting.md  2021-02-03-meeting.md  2021-02-10-meeting.md  2021-02-17-meeting.md
minutes/impl/: 2021-02-02-meeting.md
tools/: README.md
tools/agenda-generator/: .gitignore  Cargo.toml  README.md
tools/agenda-generator/src/: cli.rs  generator.rs  main.rs
tools/ipcheck/: README.md
tools/ipcheck/host/: Cargo.toml  input.txt  main.rs
tools/ipcheck/impls/: README.md
tools/ipcheck/impls/dotnet/: IPCheck.cs  IPCheck.csproj
tools/ipcheck/impls/go/: .gitignore  ipcheck.go
tools/ipcheck/impls/java/: IPCheck.java
tools/ipcheck/impls/python/: ipcheck.py
tools/ipcheck/impls/rust_current/: Cargo.toml  main.rs
tools/ipcheck/impls/rust_new/: Cargo.toml  main.rs
tools/list-contributors/: Cargo.toml  README.md  main.rs
tools/unstable-api/: Cargo.toml  README.md
tools/unstable-api/src/: main.rs  util.rs
tools/unstable-api/src/visit/: mod.rs  visit_file.rs  visit_item_const.rs  visit_item_enum.rs  visit_item_fn.rs  visit_item_impl.rs  visit_item_macro.rs  visit_item_macro2.rs  visit_item_mod.rs  visit_item_static.rs  visit_item_struct.rs  visit_item_trait.rs  visit_item_trait_alias.rs  visit_item_type.rs  visit_item_union.rs  visit_item_use.rs
unstable-api/: README.md
unstable-api/src/: main.rs  util.rs
unstable-api/src/visit/: visit_item_const.rs  visit_item_fn.rs  visit_item_impl.rs  visit_item_macro.rs  visit_item_macro2.rs  visit_item_static.rs  visit_item_struct.rs  visit_item_type.rs
