[package]
name = "fully-automatic-rust-libs-team-triage-meeting-agenda-generator"
version = "0.1.0"
authors = ["Mara Bos <m-ou.se@m-ou.se>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.1"
structopt = "0.3.21"
color-eyre = "0.5.11"
