[package]
name = "fully-automatic-rust-libs-team-triage-meeting-agenda-generator"
version = "0.1.0"
authors = ["Mara Bos <m-ou.se@m-ou.se>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
itertools = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
